fix filelog receiver

--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -13,6 +13,8 @@ spec:
           http:
 
       filelog:
+        include: 
+          - /var/log/pods/*/*/*.log
       journald:
 
       prometheus:
