add volume mounts to otel daemonset

--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -5,6 +5,15 @@ metadata:
 spec:
   mode: daemonset
   image: otel/opentelemetry-collector-contrib:latest
+
+  volumes:
+      - name: varlog
+        hostPath:
+          path: /var/log
+  volumeMounts:
+        - name: varlog
+          mountPath: /var/log
+          
   config: |
     receivers:
       otlp:
