--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -24,6 +24,15 @@ spec:
       filelog:
         include: 
           - /var/log/pods/*/*/*.log
+        start_at: beginning
+        operators:
+          - type: regex_parser
+              regex: '^(?P<time>\d{4}-\d{2}-\d{2}) (?P<sev>[A-Z]*) (?P<msg>.*)$'
+              timestamp:
+                parse_from: time
+                layout: '%Y-%m-%d'
+              severity:
+                parse_from: sev
 
       prometheus:
         config:
