--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -7,13 +7,13 @@ spec:
   image: otel/opentelemetry-collector-contrib:latest
 
   volumes:
-      - name: varlog
-        hostPath:
-          path: /var/log
+    - name: varlog
+      hostPath:
+        path: /var/log
   volumeMounts:
-        - name: varlog
-          mountPath: /var/log
-          
+    - name: varlog
+      mountPath: /var/log
+
   config: |
     receivers:
       otlp:
@@ -25,14 +25,14 @@ spec:
         include: 
           - /var/log/pods/*/*/*.log
         start_at: beginning
-        operators:
-          - type: regex_parser
-              regex: '^(?P<time>\d{4}-\d{2}-\d{2}) (?P<sev>[A-Z]*) (?P<msg>.*)$'
-              timestamp:
-                parse_from: time
-                layout: '%Y-%m-%d'
-              severity:
-                parse_from: sev
+        # operators:
+        #   - type: regex_parser
+        #       regex: '^(?P<time>\d{4}-\d{2}-\d{2}) (?P<sev>[A-Z]*) (?P<msg>.*)$'
+        #       timestamp:
+        #         parse_from: time
+        #         layout: '%Y-%m-%d'
+        #       severity:
+        #         parse_from: sev
 
       prometheus:
         config:
