--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -22,22 +22,43 @@ spec:
           http:
 
       filelog:
-        include: 
-          - /var/log/pods/opentelemetry-operator_otel-collector-daemonset-collector-*/*/*.log
-          # - /var/log/pods/*/*/*.log
-        include_file_name: false
         start_at: beginning
+        exclude:
+          - /var/log/pods/default_otel-opentelemetry-collector-agent-*_*/opentelemetry-collector/*.log
+        include:
+          - /var/log/pods/*/*/*.log
+        include_file_name: false
         operators:
-          - type: regex_parser
-            regex: '^(?P<time>\d{4}-\d{2}-\d{2}) (?P<sev>[A-Z]*) (?P<msg>.*)$'
+          - id: parser-docker
+            output: extract_metadata_from_filepath
             timestamp:
+              layout: '%Y-%m-%dT%H:%M:%S.%LZ'
               parse_from: time
-              layout: '%Y-%m-%d %T'
-            severity:
-              parse_from: sev
-        converter:
-          max_flush_count: 100
-          flush_interval: 100ms
+            type: json_parser
+          - id: extract_metadata_from_filepath
+            parse_from: $$labels.file_path
+            regex: ^\/var\/log\/pods\/(?P<namespace>[^_]+)_(?P<pod_name>[^_]+)_(?P<uid>[^\/]+)\/(?P<container_name>[^\._]+)\/(?P<run_id>\d+)\.log$
+            type: regex_parser
+          - attributes:
+              k8s.container.name: EXPR($.container_name)
+              k8s.namespace.name: EXPR($.namespace)
+              k8s.pod.name: EXPR($.pod_name)
+              k8s.pod.uid: EXPR($.uid)
+              run_id: EXPR($.run_id)
+              stream: EXPR($.stream)
+            resource:
+              k8s.pod.uid: EXPR($.uid)
+            type: metadata
+          - id: clean-up-log-record
+            ops:
+              - remove: logtag
+              - remove: stream
+              - remove: container_name
+              - remove: namespace
+              - remove: pod_name
+              - remove: run_id
+              - remove: uid
+            type: restructure
 
       prometheus:
         config:
