disable sampler in auto-instrumentation

--- a/env/test/jaeger-create-span-app/auto-instrumentation.yaml
+++ b/env/test/jaeger-create-span-app/auto-instrumentation.yaml
@@ -10,6 +10,6 @@ spec:
     - tracecontext
     - baggage
     - b3
-  sampler:
-    type: parentbased_traceidratio
-    argument: "0.25"
+  # sampler:
+  #   type: parentbased_traceidratio
+  #   argument: "0.25"
