--- a/env/devops/tools/prometheus-operator/overlays/additional-grafana-datasource-cm.yaml
+++ b/env/devops/tools/prometheus-operator/overlays/additional-grafana-datasource-cm.yaml
@@ -41,7 +41,7 @@ data:
         serviceMap:
           datasourceUid: loki
         search:
-          hide: false
+          hide: true
 
     - name: Jaeger
       uid: jaeger
