--- a/env/devops/tools/prometheus-operator/overlays/additional-grafana-datasource-cm.yaml
+++ b/env/devops/tools/prometheus-operator/overlays/additional-grafana-datasource-cm.yaml
@@ -24,16 +24,16 @@ data:
           timeInterval: 30s
           nodeGraph:
             enabled: true
-          # tracesToLogs:
-          #   datasourceUid: loki
-          #   tags: ['job', 'instance', 'pod', 'namespace']
-          #   mappedTags: [{ key: 'service.name', value: 'service' }]
-          #   mapTagNamesEnabled: false
-          #   spanStartTimeShift: '1h'
-          #   spanEndTimeShift: '1h'
-          #   filterByTraceID: false
-          #   filterBySpanID: false
-          #   lokiSearch: false
+          tracesToLogs:
+            datasourceUid: loki
+            tags: ['job', 'instance', 'pod', 'namespace']
+            mappedTags: [{ key: 'service.name', value: 'service' }]
+            mapTagNamesEnabled: false
+            spanStartTimeShift: '1h'
+            spanEndTimeShift: '1h'
+            filterByTraceID: false
+            filterBySpanID: false
+            lokiSearch: false
           search:
             hide: true
 
@@ -48,16 +48,16 @@ data:
           timeInterval: 30s
           nodeGraph:
             enabled: true
-          # tracesToLogs:
-          #   datasourceUid: loki
-          #   tags: ['job', 'instance', 'pod', 'namespace']
-          #   mappedTags: [{ key: 'service.name', value: 'service' }]
-          #   mapTagNamesEnabled: false
-          #   spanStartTimeShift: '1h'
-          #   spanEndTimeShift: '1h'
-          #   filterByTraceID: true
-          #   filterBySpanID: true
-          #   lokiSearch: true
+          tracesToLogs:
+            datasourceUid: loki
+            tags: ['job', 'instance', 'pod', 'namespace']
+            mappedTags: [{ key: 'service.name', value: 'service' }]
+            mapTagNamesEnabled: false
+            spanStartTimeShift: '1h'
+            spanEndTimeShift: '1h'
+            filterByTraceID: true
+            filterBySpanID: true
+            lokiSearch: true
           search:
             hide: false
 kind: ConfigMap
