--- a/env/devops/tools/prometheus-operator/kustomization.yaml
+++ b/env/devops/tools/prometheus-operator/kustomization.yaml
@@ -3,6 +3,11 @@
 # as those other resources to be deployed in all clusters as part of cluster addon argocd applicationset
 kind: Kustomization
 
+resources:
+  - "./resources/ds-tempo-cm.yaml"
+  - "./resources/ds-loki-cm.yaml"
+  - "./resources/ds-jaeger-cm.yaml"
+  
 helmCharts:
   - repo: https://prometheus-community.github.io/helm-charts
     name: kube-prometheus-stack
