--- a/env/devops/tools/prometheus-operator/resources/ds-tempo-cm.yaml
+++ b/env/devops/tools/prometheus-operator/resources/ds-tempo-cm.yaml
@@ -29,6 +29,6 @@ data:
             spanEndTimeShift: '1h'
             filterByTraceID: false
             filterBySpanID: false
-            lokiSearch: false
+            lokiSearch: true
           search:
-            hide: true
+            hide: false
