--- a/env/devops/tools/prometheus-operator/resources/ds-loki-cm.yaml
+++ b/env/devops/tools/prometheus-operator/resources/ds-loki-cm.yaml
@@ -18,3 +18,29 @@ data:
         editable: true
         jsonData:
           timeInterval: 30s
+          maxLines: 1000
+          derivedFields:
+            # Field with internal link pointing to data source in Grafana.
+            # Right now, Grafana supports only Jaeger and Zipkin data sources as link targets.
+            # datasourceUid value can be anything, but it should be unique across all defined data source uids.
+            - datasourceUid: jaeger
+              matcherRegex: "traceID=(\\w+)"
+              name: TraceID
+              # url will be interpreted as query for the datasource
+              url: '$${__value.raw}'
+
+            # # Field with external link.
+            # - matcherRegex: "traceID=(\\w+)"
+            #   name: TraceID
+            #   url: 'http://jaeger-operator-jaeger-query.jaeger-operator:16686/trace/$${__value.raw}'
+
+            - datasourceUid: tempo
+              matcherRegex: "traceID=(\\w+)"
+              name: TraceID
+              # url will be interpreted as query for the datasource
+              url: '$${__value.raw}'
+
+            # # Field with external link.
+            # - matcherRegex: "traceID=(\\w+)"
+            #   name: TraceID
+            #   url: 'http://tempo-tempo-distributed-query-frontend.tempo:3100/trace/$${__value.raw}'
