--- a/env/devops/tools/prometheus-operator/overlays/grafana-cm.yaml
+++ b/env/devops/tools/prometheus-operator/overlays/grafana-cm.yaml
@@ -13,7 +13,7 @@ data:
     plugins = /var/lib/grafana/plugins
     provisioning = /etc/grafana/provisioning
     [feature_toggles]
-    enable = tempoSearch tempoBackendSearch
+    enable = tempoSearch tempoBackendSearch tempoServiceGraph
 kind: ConfigMap
 metadata:
   name: grafana
