--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -138,4 +138,4 @@ spec:
         logs:
           receivers: [filelog]
           processors: [batch]
-          exporters: [logging, loki]
+          exporters: [logging]
