set log level to debug

--- a/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/opentelemetry-operator/resources/opentelemetry-collector.yaml
@@ -90,7 +90,7 @@ spec:
 
     exporters:
       logging:
-        logLevel: info
+        logLevel: debug
 
       jaeger:
         endpoint: jaeger-operator-jaeger-collector.jaeger-operator:14250
