--- a/argocd/apps/devops/argocd.yaml
+++ b/argocd/apps/devops/argocd.yaml
@@ -12,7 +12,7 @@ spec:
     path: env/devops/argocd
     repoURL: 'https://github.com/logamanig/sample-argocd-apps'
     targetRevision: master
-  project: tools
+  project: devops
   syncPolicy:
     automated:
       prune: true
