fix linkerd appset

--- a/argocd/apps/cluster-addons/cluster-addons-linkerd-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-linkerd-appset.yaml
@@ -23,7 +23,7 @@ spec:
         path: "env/cluster-addons/linkerd"
       destination:
         server: "{{server}}"
-        namespace: tools
+        namespace: linkerd
       syncPolicy:
         automated:
           prune: true
