--- a/env/cluster-addons/linkerd/resources/use-certmanager-cert-as-linkerd-issuer-cert.yaml
+++ b/env/cluster-addons/linkerd/resources/use-certmanager-cert-as-linkerd-issuer-cert.yaml
@@ -2,6 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: linkerd-identity-issuer
+  namespace: linkerd
 spec:
   secretName: linkerd-identity-issuer
   duration: 48h0m0s
@@ -25,6 +26,7 @@ apiVersion: trust.cert-manager.io/v1alpha1
 kind: Bundle
 metadata:
   name: linkerd-identity-trust-roots
+  namespace: linkerd
 spec:
   sources:
   - secret:
