--- a/env/devops/argocd/kustomization.yaml
+++ b/env/devops/argocd/kustomization.yaml
@@ -14,12 +14,13 @@
 kind: Kustomization
 
 helmCharts:
-  - name: argocd
+  - name: argo-cd
     repo: https://argoproj.github.io/argo-helm
     version: 4.0.1
     releaseName: argocd
     namespace: argocd
     valuesFile: values.yaml
+    includeCRDs: true
 
-patchesStrategicMerge:
-  - ./overlays/argocd-cm.yaml
+# patchesStrategicMerge:
+#   - ./overlays/argocd-cm.yaml
