--- a/env/devops/argocd/values.yaml
+++ b/env/devops/argocd/values.yaml
@@ -1,12 +1,17 @@
-ingress:
-  enabled: true
-  annotations:
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
-  ingressClassName: nginx
-  hosts:
-    - mk.argocd.local
-  tls:
-    - hosts:
+server:
+  config:
+    url: mk.argocd.local
+    kustomize.buildOptions: --enable-helm
+
+  ingress:
+    enabled: true
+    annotations:
+      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    ingressClassName: nginx
+    hosts:
       - mk.argocd.local
+    tls:
+      - hosts:
+        - mk.argocd.local
