add default kyverno policies as cluster addon

--- a/env/cluster-addons/tools/kyverno/kustomization.yaml
+++ b/env/cluster-addons/tools/kyverno/kustomization.yaml
@@ -7,4 +7,11 @@ helmCharts:
     includeCRDs: true
     namespace: tools
     releaseName: kyverno
-    valuesFile: values.yaml
+    valuesFile: kyverno-values.yaml
+    
+  - repo: https://kyverno.github.io/kyverno/
+    name: kyverno-policies
+    version: v2.3.1
+    namespace: tools
+    releaseName: kyverno-policies
+    valuesFile: kyverno-policies-values.yaml
