install linkerd viz

--- a/env/cluster-addons/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd/kustomization.yaml
@@ -10,3 +10,9 @@ helmCharts:
     version: 2.11.1
     releaseName: linkerd
     valuesFile: values.yaml
+
+  - repo: https://helm.linkerd.io/stable
+    name: linkerd-viz
+    version: 2.11.1
+    releaseName: linkerd
+    valuesFile: values.yaml
