fix linkerd-viz chart release name

--- a/env/cluster-addons/linkerd/kustomization.yaml
+++ b/env/cluster-addons/linkerd/kustomization.yaml
@@ -14,5 +14,5 @@ helmCharts:
   - repo: https://helm.linkerd.io/stable
     name: linkerd-viz
     version: 2.11.1
-    releaseName: linkerd
+    releaseName: linkerd-viz
     valuesFile: values.yaml
